[package]
name = "blog-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.21", features = ["map_physical_memory"] }
volatile = "0.3"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5"
linked_list_allocator = "0.9.1"

[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    #    "-display", "none"
]
run-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    #    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "stack_overflow"
harness = false
